[gd_scene load_steps=2 format=3 uid="uid://buildable_item_scene"]

[ext_resource type="Script" path="res://scripts/ui/buildable_item.gd" id="1_script"]

[node name="BuildableItem" type="PanelContainer"]
custom_minimum_size = Vector2(80, 100)
script = ExtResource("1_script")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Button" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(70, 70)
layout_mode = 2
size_flags_horizontal = 4
flat = true

[node name="IconRect" type="TextureRect" parent="VBoxContainer/Button"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="NameLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Building"
horizontal_alignment = 1
autowrap_mode = 3

[node name="CostLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 11
text = "$100"
horizontal_alignment = 1
